# Forge-V1

./: README.md  add_sbt_column.sql  business-plan.md  forge-fee-payer.json  founder_metadata.json  package-lock.json  package.json  pioneer_metadata.json  update_profiles_schema.sql
anchor/: Anchor.toml  Cargo.toml  README.md
anchor/programs/forge_escrow/: Cargo.toml
anchor/programs/forge_escrow/src/: lib.rs
anchor/programs/forge_sbt/: Cargo.toml
anchor/tests/: forge_escrow.test.ts
app/: globals.css  layout.tsx  page.tsx
app/api/rankings/: route.ts
app/api/tasks/: route.ts
app/api/upload-metadata/: route.ts
app/api/upload-to-ipfs/: route.ts
app/components/: AuthGate.tsx  DebugEscrow.tsx  ForgeLoader.tsx  MobileGuard.tsx  TechStackBadges.tsx  TechStackVerification.tsx  connect-modal.tsx  fire-particles.tsx  grid-background.tsx  icons.tsx  navbar.tsx  providers.tsx  scroll-animations.tsx  tunnel-background.tsx  wallet-button.tsx
app/components/civic/: GatewayWrapper.tsx
app/components/dashboard/: nav.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/browse/: layout.tsx  page.tsx
app/dashboard/developers/: page.tsx
app/dashboard/escalated/: page.tsx
app/lib/: nft-metadata.ts  solana-client-context.tsx  sponsored-tx.ts  supabase.ts  validation.ts
public/: index.iife.min.js.map  main-hero-graphic.png:Zone.Identifier
public/Favicon/: favicon.ico:Zone.Identifier  site.webmanifest
scratch/: check_divs.js
scripts/: airdrop-fee-payer.mjs  test-pinata.ts  upload-metadata.ts
supabase/migrations/: add_tech_stack.sql  schema.sql
(+33 files in other folders)
